# paraxial_wave_solver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: aperture_diffraction.py  demo.ipynb  hermite_gaussian.py  laguerre_gaussian.py  random_media.py  simple_beam.py  test_pml.py
paraxial_wave_solver/: __init__.py
paraxial_wave_solver/src/: config.py  operators.py  pml.py  solvers.py  utils.py
paraxial_wave_solver/tests/: test_operators.py  test_solvers.py
src/: __init__.py  config.py  operators.py  pml.py  solvers.py  utils.py
tests/: test_operators.py  test_solvers.py
